[package]
name = "lnp-core"
version = "0.3.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP Core Library: rust implementation of modular lightning channels architecture"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"
exclude = [".github", "contrib"]

[lib]
name = "lnp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3", features = ["stringly_conversions"] }
amplify_derive = "2.4.3"
lnpbp = { git = "https://github.com/claudiosdc/rust-lnpbp.git", branch = "v0.3.0_desc_wallet_fix" }
rgb-core = { git = "https://github.com/claudiosdc/rgb-core.git", branch = "v0.3.0_desc_wallet_fix", optional = true }
strict_encoding = "1"
descriptor-wallet = { git = "https://github.com/claudiosdc/descriptor-wallet.git", branch = "v0.3.5_descriptor_fix", features = ["keygen"] }
bitcoin = { version = "0.26", features = ["rand"] }
internet2 = { git = "https://github.com/claudiosdc/rust-internet2.git", branch = "v0.3.7_desc_wallet_fix", features = ["bitcoin-ext", "lnpbp"] }
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }
lazy_static = "1.4"

[features]
default = []
all = ["rgb", "serde"]
rgb = ["rgb-core", "internet2/rgb"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]

[workspace]
members = ["."]
default-members = ["."]
exclude = ["dep_test"]
